openshift/service-testing.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ce-api-harness-testing
    template: template-nodejs
  name: ce-api-harness-testing
  namespace: 1t21-d
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    deploymentconfig: ce-api-harness-testing
  sessionAffinity: None
  type: ClusterIP
